--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,11 +7,11 @@ material3 = "1.10.0-alpha05"
 
 [libraries]
 compose-material3 = { group = "org.jetbrains.compose.material3", name = "material3", version.ref = "material3" }
-compose-emoji = { group = "org.kodein.emoji", name = "emoji-compose-m2", version.ref = "composeEmoji" }
 cup-laser = { group = "net.kodein.cup", name = "cup-laser", version.ref = "cup" }
 cup-sourceCode = { group = "net.kodein.cup", name = "cup-source-code", version.ref = "cup" }
 cup-speakerWindow = { group = "net.kodein.cup", name = "cup-speaker-window", version.ref = "cup" }
 cup-widgets-material3 = { group = "net.kodein.cup", name = "cup-widgets-material3", version.ref = "cup" }
+emoji-compose = { group = "org.kodein.emoji", name = "emoji-compose-m2", version.ref = "composeEmoji" }
 
 [plugins]
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
