--- a/composeApp/.cup/window.properties
+++ b/composeApp/.cup/window.properties
@@ -1,6 +1,6 @@
-#Wed Feb 18 15:53:06 CET 2026
-placement=Fullscreen
-position.x=205.0
-position.y=-875.0
+#Sat Feb 21 15:51:22 CET 2026
+placement=Floating
+position.x=48.0
+position.y=78.0
 size.height=720.0
 size.width=960.0
