--- a/composeApp/.cup/window.properties
+++ b/composeApp/.cup/window.properties
@@ -1,5 +1,5 @@
-#Mon Feb 23 18:02:51 CET 2026
-placement=Floating
+#Mon Feb 23 22:44:05 CET 2026
+placement=Fullscreen
 position.x=48.0
 position.y=78.0
 size.height=720.0
