Add speaker notes

--- a/composeApp/.cup/window.properties
+++ b/composeApp/.cup/window.properties
@@ -1,6 +1,6 @@
-#Mon Feb 23 22:44:05 CET 2026
-placement=Fullscreen
-position.x=48.0
-position.y=78.0
+#Tue Feb 24 12:42:18 CET 2026
+placement=Floating
+position.x=71.0
+position.y=-847.0
 size.height=720.0
 size.width=960.0
