--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 17 # Ajusta la versión si usas Java 21 u otra
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
@@ -20,16 +20,12 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
 
       - name: Build Compose Web
-        # Dependiendo de si usas Wasm o JS, el comando suele ser uno de estos.
-        # Si localmente compilas diferente, sustituye este comando:
         run: ./gradlew :composeApp:wasmJsBrowserDistribution
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Aquí apuntamos exactamente a la carpeta que mencionaste
-          # Asegúrate de que la ruta final coincida con donde Compose deja tu index.html
-          path: ./composeApp/build/dist
+          path: ./composeApp/build/dist/wasmJs/productionExecutable
 
   deploy:
     environment:
