--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,19 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Build CuP for GitHub Pages
-        run: ./gradlew distDoc
+      - name: Build Compose Web
+        run: ./gradlew :composeApp:wasmJsBrowserDistribution
+          
+          # 2. EL TRUCO: Inyectamos la ruta base en el HTML autogenerado
+          - name: Fix Base Path for GitHub Pages
+            run: |
+              sed -i 's|<head>|<head><base href="/ErrorsAndCuP/">|g' ./composeApp/build/dist/wasmJs/productionExecutable/index.html
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./doc
+          # 3. Subimos la carpeta final
+          - name: Upload artifact
+            uses: actions/upload-pages-artifact@v3
+            with:
+              path: ./composeApp/build/dist/wasmJs/productionExecutable
 
   deploy:
     environment:
